maquetasao de aretes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
     </nav>
     <!-- ----- Fin de la barra de navegación Navbar ----- -->
 
-     <!-- <img src="inicio/img/banner1.svg" alt="bannerPrincipal" class="banner1"> -->
     </header>
 
     <main>
@@ -78,7 +77,7 @@
             </div>
         </section>
     </main>
-
+<!-- inicio Seccion del footer -->
     <footer>
         <div class="footerContenedor">
             <div class="footerLogo">
@@ -97,6 +96,7 @@
             </div>
         </div>
     </footer>
+    <!-- Fin de seccion del footer -->
 
     
 </body>
