--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,27 +12,28 @@
     <!-- Conexión con hoja de estilos CSS -->
     <link rel="stylesheet" href="/inicio/styles/styles.css">
 </head>
+
 <body>
     <header class="contenidoPrincipal">
-    <!-- -----Creacion de la barra de navegación NavBar----- -->
-    <nav class="navbar">
+        <!-- -----Creacion de la barra de navegación NavBar----- -->
+        <nav class="navbar">
             <!-- Logo del navBar -->
             <div class="fotoLogo">
-                <a href="#">
+                <a href="index.html">
                     <img src="/inicio/img/navbarlogo.svg" alt="logo">
                 </a>
             </div>
-             <!-- Fin del Logo del navBar -->
+            <!-- Fin del Logo del navBar -->
 
-             <!-- Links Principales -->
-             <div class="navbarLinks">
-                <a class="Link" href="#">inicio</a>
-                <a class="Link" href="#">aretes</a>
-                <a class="Link" href="#">agendas</a>
-                <a class="Link" href="#">pines</a>
-                <a class="Link" href="#">postales</a>
-                <a class="Link" href="#">mapas</a>
-                <a class="Link" href="#">nosotros</a>
+            <!-- Links Principales -->
+            <div class="navbarLinks">
+                <a class="Link" href="/index.html">inicio</a>
+                <a class="Link" href="/aretes/aretes.html">aretes</a>
+                <a class="Link" href="/agendas/agendas.html">agendas</a>
+                <a class="Link" href="/pines/pines.html">pines</a>
+                <a class="Link" href="/postales/postales.html">postales</a>
+                <a class="Link" href="/mapas/mapas.html">mapas</a>
+                <a class="Link" href="/nosotros/nosotros.html">nosotros</a>
             </div>
             <!-- Fin de los Links principales -->
 
@@ -43,8 +45,8 @@
                 <i class="fa-solid fa-bag-shopping" style="color: #ffffff;"></i>
             </div>
             <!-- Fin de iconos de navegación -->
-    </nav>
-    <!-- ----- Fin de la barra de navegación Navbar ----- -->
+        </nav>
+        <!-- ----- Fin de la barra de navegación Navbar ----- -->
 
     </header>
 
@@ -54,30 +56,40 @@
                 <h2>Nuestros Productos</h2>
                 <article class="productos">
                     <div class="tarjeta">
-                       <h2>Aretes Biodiversos</h2>
-                       <img src="inicio/img/aretesBiodiversos.png" alt="Aretes Biodiversos">
-                   </div>
+                        <a href="/aretes/aretes.html">
+                            <h2>Aretes Biodiversos</h2>
+                            <img src="inicio/img/aretesBiodiversos.png" alt="Aretes Biodiversos">
+                        </a>
+                    </div>
                     <div class="tarjeta">
-                       <h2>Pines</h2>
-                       <img src="inicio/img/pines.png" alt="Pines">
-                   </div>
+                        <a href="/pines/pines.html">
+                            <h2>Pines</h2>
+                            <img src="inicio/img/pines.png" alt="Pines">
+                        </a>
+                    </div>
                     <div class="tarjeta">
-                       <h2>Agendas Artesanales</h2>
-                       <img src="inicio/img/agendasArtesanales.png" alt="Agendas Artesanales">
-                   </div>
+                        <a href="/agendas/agendas.html">
+                            <h2>Agendas Artesanales</h2>
+                            <img src="inicio/img/agendasArtesanales.png" alt="Agendas Artesanales">
+                        </a>
+                    </div>
                     <div class="tarjeta">
-                       <h2>Mapas Biodiversos</h2>
-                       <img src="inicio/img/mapasBiodiversos.png" alt="Mapas Biodiversos">
-                   </div>
+                        <a href="/mapas/mapas.html">
+                            <h2>Mapas Biodiversos</h2>
+                            <img src="inicio/img/mapasBiodiversos.png" alt="Mapas Biodiversos">
+                        </a>
+                    </div>
                     <div class="tarjeta">
-                       <h2>Postales</h2>
-                       <img src="inicio/img/postales.png" alt="Postales">
-                   </div>
+                        <a href="/postales/postales.html">
+                            <h2>Postales</h2>
+                            <img src="inicio/img/postales.png" alt="Postales">
+                        </a>
+                    </div>
                 </article>
             </div>
         </section>
     </main>
-<!-- inicio Seccion del footer -->
+    <!-- inicio Seccion del footer -->
     <footer>
         <div class="footerContenedor">
             <div class="footerLogo">
@@ -88,9 +100,13 @@
             <div class="contacto">
                 <h2>Contactos</h2>
                 <ul>
-                    <li><a href="#"><i class="fa-brands fa-whatsapp"></i>Whatsapp</a></li>
-                    <li><a href="#"><i class="fa-brands fa-facebook-f"></i>Facebook</a></li>
-                    <li><a href="#"><i class="fa-brands fa-instagram"></i>Instagram</a></li>
+                    <li><a
+                            href="https://api.whatsapp.com/send?phone=%2B573133249532&data=ARCfbc43J9-4ebRlsGscd3b1gxKyFqMO5ojAlm17pXZD8cFsbAkij-tIskVLXn36Sc4PLkD_a3NI1xEV9M-PeyXjQ99AQ_CuxigAd2_txpeNWo0rXB_fkWDtfvNockazE4UfupNTsjRcO1I-_fefijnAPw&source=FB_Page&app=facebook&entry_point=page_cta" target="_blank"><i
+                                class="fa-brands fa-whatsapp"></i>Whatsapp</a></li>
+                    <li><a href="https://www.facebook.com/agendartesanal?mibextid=LQQJ4d" target="_blank"><i
+                                class="fa-brands fa-facebook-f"></i>Facebook</a></li>
+                    <li><a href="https://instagram.com/sustrato_artesanal?igshid=OGQ5ZDc2ODk2ZA==" target="_blank"><i
+                                class="fa-brands fa-instagram"></i>Instagram</a></li>
                 </ul>
 
             </div>
@@ -98,8 +114,9 @@
     </footer>
     <!-- Fin de seccion del footer -->
 
-    
+
 </body>
 <!-- FontAwesome -->
 <script src="https://kit.fontawesome.com/7ea5c20133.js" crossorigin="anonymous"></script>
+
 </html>
